--- a/views/partials/template/header.ejs
+++ b/views/partials/template/header.ejs
@@ -3,17 +3,16 @@
     <section class="layout">
       <div class="branding">
         <a href="/">
-          <img src="/images/misc/rouxacademymeetups.svg" alt="Roux Academy Logo">
+          <img src="/images/misc/skpt_banner_2.jpg" alt="Roux Academy Logo">
         </a>
       </div><!-- branding -->
     </section><!-- layout -->
-  </div><!-- hero -->
-
+  </div><!--hero-->
   <div class="navigation">
     <section class="layout">
       <ul class="nav">
-        <li><a href="/"><i class="icon-home"></i> Home</a></li>
-        <li><a href="/speakers"><i class="icon-user"></i> Speakers</a></li>
+        <li><a href="/"><i class="icon-home"></i> HCMUTE</a></li>
+        <li><a href="/speakers"><i class="icon-user"></i> CNTT</a></li>
       </ul><!-- nav -->
     </section><!-- layout -->
   </div><!-- navigation -->
